--- a/templates/general/lista_perc_imp.html
+++ b/templates/general/lista_perc_imp.html
@@ -26,7 +26,9 @@
                             {% for d in perc_imp %}
                             <tr>
                                 
-                                <td><div class="btn-group">
+                                <td>
+                                    {% if empresa.id == d.empresa.id %}
+                                    <div class="btn-group">
                                        <button type="button" class="btn btn-xs color_barra" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         <i class="icon-settings"> </i> <span class="caret"></span>
                                       </button>                                    
@@ -38,6 +40,7 @@
                                                                         
                                       </ul>      
                                     </div>
+                                    {% endif %}
                                 </td>
                                 <td>{{d.nombre|default_if_none:''}}</td>
                                 <td>{{ d.descripcion|default_if_none:'' }}</td>                                
