--- a/fm/templates/fm/modal.html
+++ b/fm/templates/fm/modal.html
@@ -27,8 +27,7 @@
                             <div class="row">
                                 <div class="col-xs-6">
                                   <button data-dismiss="modal" class="btn pull-left btn red-flamingo" type="button">
-                                      <i class="fa fa-times"></i>
-                                      {% trans 'Cancelar' %}
+                                      <i class="fa fa-times"></i> {% trans 'Cancelar' %}
                                   </button>
                                 </div>
                                 <div class="col-xs-6">
