--- a/templates/header.html
+++ b/templates/header.html
@@ -24,7 +24,7 @@
                 <div class="row">                  
                   <div class="col-sm-12">
                     <ul class="mega-menu-submenu">
-                    {% if 'gral_configuracion' in permisos_grupo %} 
+                    {% if 'empresa_configuracion' in permisos_grupo %} 
                     <li>
                       <a href="{% url 'empresa_editar' id=empresa.id %}"><i class="icon-settings"></i>Configurar Empresa</a>
                     </li>           
