--- a/templates/usuarios/usuario_form.html
+++ b/templates/usuarios/usuario_form.html
@@ -29,7 +29,7 @@
               	<div class="portlet-body">
 		           <div class="col-sm-12">	
 		            
-				    <form role="form" class="form cpb form-horizontal " method="POST" action="" id="form-alta" enctype="multipart/form-data">
+				    <form role="form" class="form abm form-horizontal " method="POST" action="" id="form-alta" enctype="multipart/form-data">
 				     {% csrf_token %}         				        
 				        {{ form.errors }}
 				         <div class="row">
