--- a/templates/ingresos/presupuesto/cpb_presup_listado.html
+++ b/templates/ingresos/presupuesto/cpb_presup_listado.html
@@ -53,27 +53,36 @@
                                         <li><a target="_blank" href="{% url 'imprimirPresupuesto' id=cpb.pk %}"><i class=" icon-printer"></i> Imprimir</a></li>
                                         <li><a href="{% url 'mandarEmail' id=cpb.pk %}"><i class="icon-envelope-open"></i> Enviar por Email</a></li>
                                             <li role="separator" class="divider"></li>
-                                        <li><a href="{% url 'cpb_presup_editar' id=cpb.pk %}"  title="Editar" data-fm-callback="reload" ><i class="icon-note"></i> Editar</a></li>
-                                         <li><a href="#" 
-                                                    onClick="alerta= alertify.dialog('confirm').set({'labels':{ok:'Aceptar', cancel:'Cancelar'},'message': '¿DESEA ELIMINAR EL PRESUPUESTO SELECCIONADO?',transition:'fade','onok': function(){ window.location.href = '{% url 'cpb_presup_eliminar' id=cpb.pk %}'; },'oncancel': function(){ return true;} }); alerta.setting('modal', true); alerta.setHeader('ELIMINAR COMPROBANTE'); alerta.show(); return true;"><i class="icon-trash"></i>Eliminar</a>
-                                                </li>       
-                                        <li role="separator" class="divider"></li>
+                                    {% if 'cpb_presup_abm' in permisos_grupo %}
+                                        {% if cpb.presup_aprobacion.pk != 14 %}
+                                            <li><a href="{% url 'cpb_presup_editar' id=cpb.pk %}"  title="Editar" data-fm-callback="reload" ><i class="icon-note"></i> Editar</a></li>
+                                            <li><a href="#" 
+                                                        onClick="alerta= alertify.dialog('confirm').set({'labels':{ok:'Aceptar', cancel:'Cancelar'},'message': '¿DESEA ELIMINAR EL PRESUPUESTO SELECCIONADO?',transition:'fade','onok': function(){ window.location.href = '{% url 'cpb_presup_eliminar' id=cpb.pk %}'; },'oncancel': function(){ return true;} }); alerta.setting('modal', true); alerta.setHeader('ELIMINAR COMPROBANTE'); alerta.show(); return true;"><i class="icon-trash"></i>Eliminar</a>
+                                            </li>       
+                                            <li role="separator" class="divider"></li>
+                                        {% endif %}
+                                        
 
-                                            {% if cpb.presup_aprobacion.pk != 12 %}
+                                            {% if cpb.presup_aprobacion.pk != 12 and cpb.presup_aprobacion.pk != 14 %}
                                                 <li><a href="#" 
                                                 onClick="alerta= alertify.dialog('confirm').set({'labels':{ok:'Aceptar', cancel:'Cancelar'},'message': '¿DESEA APROBAR EL PRESUPUESTO ACTUAL?',transition:'fade','onok': function(){ window.location.href = '{% url 'presup_aprobacion' id=cpb.pk estado=12 %}'; },'oncancel': function(){ return true;} }); alerta.setting('modal', true); alerta.setHeader('APROBAR PRESUPUESTO'); alerta.show(); return true;"><i class="icon-like"></i>Aprobar</a></li>
 
-                                            {% elif cpb.presup_aprobacion.pk != 13 %}
+                                            {% elif cpb.presup_aprobacion.pk == 12 %}
                                                 <li><a href="#" 
                                                 onClick="alerta= alertify.dialog('confirm').set({'labels':{ok:'Aceptar', cancel:'Cancelar'},'message': '¿DESEA RECHAZAR EL PRESUPUESTO ACTUAL?',transition:'fade','onok': function(){ window.location.href = '{% url 'presup_aprobacion' id=cpb.pk estado=13  %}'; },'oncancel': function(){ return true;} }); alerta.setting('modal', true); alerta.setHeader('RECHAZAR PRESUPUESTO'); alerta.show(); return true;" ><i class="icon-dislike"></i>Rechazar</a></li>
                                             {% endif %}
                                         {% if cpb.presup_aprobacion.pk = 12 %}
                                         <li role="separator" class="divider"></li>
-                                        <li><a href="{% url 'cpb_venta_presup_nuevo' id=cpb.pk %}"  title="Generar Venta" ><i class="icon-note"></i> Generar/Cargar Venta</a></li>
-                                        <li><a href="{% url 'orden_pedido_presup_nuevo' id=cpb.pk %}"  title="Generar Nota Pedido" ><i class="icon-notebook"></i> Generar Nota Pedido</a></li>
+                                            {% if 'cpb_ventas_abm' in permisos_grupo %}
+                                                <li><a href="{% url 'cpb_venta_presup_nuevo' id=cpb.pk %}"  title="Generar Venta" ><i class="icon-note"></i> Generar/Cargar Venta</a></li>
+                                            {% endif %}
+                                            {% if 'trab_pedidos' in permisos_grupo %}
+                                                <li><a href="{% url 'orden_pedido_presup_nuevo' id=cpb.pk %}"  title="Generar Nota Pedido" ><i class="icon-notebook"></i> Generar Nota Pedido</a></li>
+                                            {% endif %}
                                         {% endif %}
+                                    {% endif %} 
                                         <li role="separator" class="divider"></li>
-                                            <li><a href="{% url 'cpb_editar_seguimiento' id=cpb.pk %}"  class="fm-update" data-fm-head="EDITAR SEGUIMIENTO"  title="Editar Seguimiento" data-fm-target="#object-{{ item.pk }}" data-fm-callback="reload" ><i class="icon-speech"></i>Seguimiento</a></li>                                            
+                                        <li><a href="{% url 'cpb_editar_seguimiento' id=cpb.pk %}"  class="fm-update" data-fm-head="EDITAR SEGUIMIENTO"  title="Editar Seguimiento" data-fm-target="#object-{{ item.pk }}" data-fm-callback="reload" ><i class="icon-speech"></i>Seguimiento</a></li>                                            
                                       </ul>
                                         
                                         
