--- a/templates/header.html
+++ b/templates/header.html
@@ -52,9 +52,10 @@
               </div>
           </ul>
         </li>
-
-        
-      </ul>
+        <li>   
+          <a href="mailto:{{EMAIL_CONTACTO}}" title="Contacto/Enviar Consultas"><i class="icono_mail icon-envelope"></i></a>
+        </li>
+      </ul>      
     </div>
 
 
