--- a/templates/menues.html
+++ b/templates/menues.html
@@ -353,6 +353,9 @@
                         <a href="{% url 'percimp_listado' %}"><i class="fa fa-navicon"></i>Percep./Impuestos</a>
                       </li> 
                       <li>
+                        <a href="{% url 'retenc_listado' %}"><i class="fa fa-navicon"></i>Retenciones</a>
+                      </li> 
+                      <li>
                         <a href="{% url 'formapago_listado' %}"><i class="fa fa-money"></i>Formas de Pago/Cobro</a>
                       </li>
                       <li>
