--- a/templates/egresos/ordenpago/cpb_rec_pago_form.html
+++ b/templates/egresos/ordenpago/cpb_rec_pago_form.html
@@ -140,6 +140,37 @@
 						                </table>                        
 						         </div>                						         
 						     </div>
+						     <div class="row"> 
+						     <div class="col-xs-12" >
+								     	<table id="id_forms_table2" width="100%" class="table tabla table-condensed tabla_listado">
+						                    <thead>
+						                          <tr>
+						                              <th style="width: 40%;">Retenciones</th>						                          					
+						                              <th style="width: 30%;">Detalle</th>
+						                              <th style="width: 20%;">Importe</th>						                              
+						                              <th style="width: 10%;" class="remove-sorting"></th>
+						                          </tr>
+						                    </thead>					                    
+		  			                        <tbody class='form-detallesPI'>       											                    	
+						                    	{{ compras_ret.management_form }}
+						                    	{{ compras_ret.non_form_errors }}
+						                    	{% for form3 in compras_ret.forms %}					                      								                      	
+							                      	{{ form3.non_field_errors }}
+							                      	<tr class="{{ compras_ret.prefix }}">           					                      	
+								                      	<td>{% bootstrap_field form3.retencion show_label=False%}</td>
+								                      	<td>{% bootstrap_field form3.detalle show_label=False%}</td>
+								                      	<td>{% bootstrap_field form3.importe_total show_label=False%}</td>								                      	
+								                      	<td>{{form3.DELETE}}
+								                      		<a class="btn btn-danger delete-row2" title="Eliminar">
+								                      			<i class="fa fa-times" aria-hidden="true"></i></a>			                      	
+								                      	</td>
+								                      	{% for hidden in form3.hidden_fields %} {{ hidden }} {% endfor %}
+								                    </tr>								                    
+						                     	{% endfor %}							                     	
+						                    </tbody>
+						                </table>            								       	
+								      </div>
+						   </div>		  
 					     
 					     <div class="row">
 						          <div class="col-xs-12"> 
