--- a/fm/templates/fm/general/form_retenc.html
+++ b/fm/templates/fm/general/form_retenc.html
@@ -11,7 +11,8 @@
         <div class="col-xs-12">
 	         	<div class="row">										
 					<div class="col-sm-5">{% bootstrap_field form.nombre %}</div>																		  
-					<div class="col-sm-7">{% bootstrap_field form.descripcion %}</div>																		  
+					<div class="col-sm-4">{% bootstrap_field form.grupo %}</div>																		  
+					<div class="col-sm-3">{% bootstrap_field form.descripcion %}</div>																		  
 			  	</div>								
 		</div>
     </form>
