--- a/templates/menues.html
+++ b/templates/menues.html
@@ -346,6 +346,7 @@
                       <li>
                         <h3>COMPROBANTES</h3>
                       </li>
+                       {% if  if tipo_usr == 0 %}
                       <li>
                         <a href="{% url 'pto_vta_listado' %}"><i class="fa fa-asterisk"></i>Puntos de Venta</a>
                       </li>
@@ -355,6 +356,7 @@
                       <li>
                         <a href="{% url 'retenc_listado' %}"><i class="fa fa-navicon"></i>Retenciones</a>
                       </li> 
+                      {% endif %}
                       <li>
                         <a href="{% url 'formapago_listado' %}"><i class="fa fa-money"></i>Formas de Pago/Cobro</a>
                       </li>
