--- a/templates/menues.html
+++ b/templates/menues.html
@@ -346,7 +346,7 @@
                       <li>
                         <h3>COMPROBANTES</h3>
                       </li>
-                       {% if  if tipo_usr == 0 %}
+                       {% if  tipo_usr == 0 %}
                       <li>
                         <a href="{% url 'pto_vta_listado' %}"><i class="fa fa-asterisk"></i>Puntos de Venta</a>
                       </li>
