--- a/templates/egresos/ordenpago/cpb_rec_pago_listado.html
+++ b/templates/egresos/ordenpago/cpb_rec_pago_listado.html
@@ -7,7 +7,10 @@
 {% endblock %}
 {% block main %} 
     
-
+         <div id="cargando" class="cargando" >
+            <span class="cargando-txt">CARGANDO...</span>
+            <img class="cargando-img" src="{% static 'img/loading-bars.svg' %}">
+        </div>
         <div class="col-md-12">   
             <div class="portlet box toolbar_green">
                 <div class="portlet-title">
