--- a/templates/ingresos/cobranzas/cpb_rec_cobranza_form.html
+++ b/templates/ingresos/cobranzas/cpb_rec_cobranza_form.html
@@ -126,7 +126,37 @@
 					                </table>                        
 					         </div>                						         
 					     </div>
-					    
+					     <div class="row"> 
+						     <div class="col-xs-12" >
+						     	<table id="id_forms_table2" width="100%" class="table tabla table-condensed tabla_listado">
+				                    <thead>
+				                          <tr>
+				                              <th style="width: 40%;">Retenciones</th>						                          					
+				                              <th style="width: 30%;">Detalle</th>
+				                              <th style="width: 20%;">Importe</th>						                              
+				                              <th style="width: 10%;" class="remove-sorting"></th>
+				                          </tr>
+				                    </thead>					                    
+  			                        <tbody class='form-detallesRet'>       											                    	
+				                    	{{ cpb_ret.management_form }}
+				                    	{{ cpb_ret.non_form_errors }}
+				                    	{% for form3 in cpb_ret.forms %}					                      								                      	
+					                      	{{ form3.non_field_errors }}
+					                      	<tr class="{{ cpb_ret.prefix }}">           					                      	
+						                      	<td>{% bootstrap_field form3.retencion show_label=False%}</td>
+						                      	<td>{% bootstrap_field form3.detalle show_label=False%}</td>
+						                      	<td>{% bootstrap_field form3.importe_total show_label=False%}</td>								                      	
+						                      	<td>{{form3.DELETE}}
+						                      		<a class="btn btn-danger delete-row2" title="Eliminar">
+						                      			<i class="fa fa-times" aria-hidden="true"></i></a>			                      	
+						                      	</td>
+						                      	{% for hidden in form3.hidden_fields %} {{ hidden }} {% endfor %}
+						                    </tr>								                    
+				                     	{% endfor %}							                     	
+				                    </tbody>
+				                </table>            								       	
+						      </div>
+						   </div>
 					     <div class="row">
 						         <div class="col-xs-12"> 
 						         								     
@@ -144,7 +174,7 @@
 							         		<div class="col-sm-8 col-xs-7"><span class="totales_comprobante">Total Bruto</span></div> <div class="col-sm-4 col-xs-5">{% bootstrap_field form.importe_subtotal show_label=False%}</div> 
 							         	</div>
 							         	<div class="col-xs-12"> 
-							         		<div class="col-sm-8 col-xs-7"><span class="totales_comprobante">Total Impuestos</span></div> <div class="col-sm-4 col-xs-5">{% bootstrap_field form.importe_imp_perc show_label=False%}</div> 
+							         		<div class="col-sm-8 col-xs-7"><span class="totales_comprobante">Total Retenciones</span></div> <div class="col-sm-4 col-xs-5">{% bootstrap_field form.importe_ret show_label=False%}</div> 
 							         	</div>
 							         	<div class="col-xs-12"> 
 							         		<div class="col-sm-8 col-xs-7"><span class="totales_comprobante">Total Cobro</span></div> <div class="col-sm-4 col-xs-5">{% bootstrap_field form.importe_total show_label=False%}</div> 
